--- a/index.Rmd
+++ b/index.Rmd
@@ -116,16 +116,15 @@ style_mono_accent(
 
 * To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCID) was developed, with the main plan surrounding the construction of a sea wall which could reach 32km in length `r Citet(myBib,"GiantSeaWall")`.
 
-## Criticism to master plan policy
+* **Criticism to master plan policy**
 
-* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
+    * Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Criticism 1)
 
-* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
+    * It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
 
-* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
+    * Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
 
-
-* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
+    * Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
 
 ]
 
@@ -147,9 +146,9 @@ style_mono_accent(
 ## Causes of Subsidence
 
 .pull-left[
-* Physical factors: earthquakes. Indonesia is located on destructive plate boundaries where earthquakes happen frequently (Bott et al., 2021).
+* Physical factors: earthquakes. Indonesia is located on destructive plate boundaries where earthquakes happen frequently (Causes of LS 1).
 
-* Human/ social factors: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
+* Human/ social factors: groundwater extraction, rapid urban development, improper agricultural practices (Causes of LS 2). 
 
 * Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
 
@@ -239,7 +238,7 @@ knitr::include_graphics("SendaiFramrwork.jpeg")
 
 * To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
 
-* To strengthen local governance towards disaster risk management in accordance with this global framework -- a top down approach
+* To strengthen local governance towards disaster risk management in accordance with this global framework
 
 * Recognises the state has the primary role for DRR
 
@@ -541,46 +540,21 @@ styled_table
 
 
 ---
-
-## Limitations
-
 .pull-left[
-
-### Scope
-
-<<<<<<< HEAD
-- ** Integrated Master Plan is inclusive of short-term and long-term solutions with mission and approach detailing spatial alternatives for flood safety, social aspects, land reclamation, business & residential, main ports, mobility & infrastructure, water management, recreation-green space, environmental impact. However, our project only covers land subsidence that might directly provide integrated solutions to other sectors of master plan1. **  
-
-=======
-- ** Integrated Master Plan is inclusive of short-term and long-term solutions with mission and approach detailing spatial alternatives for flood safety, social aspects, land reclamation, business & residential, main ports, mobility & infrastructure, water management, recreation-green space, environmental impact. However, our project only covers land subsidence that might directly provide integrated solutions to other sectors of master plan. **  
->>>>>>> 91f52e9ac0671854fd7317ed2e4ae08cc1caffdd
-- 
-]
-.pull-right[
-
-<<<<<<< HEAD
 ## Limitations
+
 
 - The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR)2,4.
 
 - Problem of Machine Learning 10.
 
-=======
-### Limitations and Uncertainity
-
-- The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR).
-- Problem of Machine Learning.
-
-- Problem of mis-trust between public and government effecting participatory and consultative meetings.
-- Unexpected Employee turnover.
-
+- Problem of mistrust between public and government effecting participatory and consultative meetings.
 
 - Unexpected Data cost at freeware platforms 10.
-
-=======
-- Unexpected Data cost at freeware platforms.
-
 ]
+
+## Mitigations
+
 
 ---
 
@@ -588,7 +562,7 @@ styled_table
 ```
 class: text-justify
 
-## Reflection
+## Summary (?)
 
 Apart from the global problem of Climate Change, the main factor that is affecting the sinking of Jakarta City is its Land Subsidence. So, our plan will address to mitigate that problem via both Predictive & Preventive Measures.
 
@@ -630,5 +604,11 @@ Management Regulation of Indonesia’s Coastal and Sea Areas
 
 - 10CASA0023
 
+- Criticism 1 Nunn et al (2021) Seawalls as maladaptations along island coasts https://www.sciencedirect.com/science/article/abs/pii/S0964569121000399?casa_token=3ErEoQPI2QsAAAAA:0aQskpbCflgGu0qxf-_6ZfVAKFWVBhv3GJkpZiouQvEK2qrsIqf8Hl_6dQhb8cf9CETywHDyNAv 
 
+- Causes of LS 1 Bott et al., 2021 Land subsidence in Jakarta and Semarang Bay – The relationship between physical processes, risk perception, and household adaptation https://www.sciencedirect.com/science/article/pii/S0964569121002581 
+
+- Causes of LS 2 Adibin et al., 2011 Land subsidence of Jakarta (Indonesia) and its
+relation with urban development, Nat. Hazards, 59, 1753–1771,
+2011. https://www.sciencedirect.com/science/article/pii/S0964569121002581 
 
