--- a/index.Rmd
+++ b/index.Rmd
@@ -568,34 +568,40 @@ styled_table
 
 =======
 - ** Integrated Master Plan is inclusive of short-term and long-term solutions with mission and approach detailing spatial alternatives for flood safety, social aspects, land reclamation, business & residential, main ports, mobility & infrastructure, water management, recreation-green space, environmental impact. However, our project only covers land subsidence that might directly provide integrated solutions to other sectors of master plan. **  
->>>>>>> 91f52e9ac0671854fd7317ed2e4ae08cc1caffdd
+
 - 
 ]
 .pull-right[
 
-<<<<<<< HEAD
+
 ## Limitations
 
-- The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR)2,4.
-
-- Problem of Machine Learning 10.
-
-=======
-### Limitations and Uncertainity
-
-- The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR).
-- Problem of Machine Learning.
-
 - Problem of mis-trust between public and government effecting participatory and consultative meetings.
-- Unexpected Employee turnover.
 
+- Unexpected Employee turnover.
 
 - Unexpected Data cost at freeware platforms 10.
 
-=======
-- Unexpected Data cost at freeware platforms.
+- Change of government.
+
+
 
 ]
+
+
+
+Mitigation
+
+- Participatory Learning Application of Consultative meeting would create trust and engagement between the people of Jakarta and the government.
+
+- Maintaining the data infrastructure of our project for smooth transition.
+
+- Alternative data sets from other satellite imagery are available with increased processing, validation etc.
+
+- Uniform budget-head transition with changing political parties.
+
+
+ 
 
 ---
 
