--- a/index.Rmd
+++ b/index.Rmd
@@ -672,3 +672,7 @@ class: text-justify
 
 this is for maddie to do refrenceing 
 Criticizing sea wall approch are all taken from this PDF (GIANT SEA WALL CONSTRUCTION: IS IT THE RIGHT SOLUTION TO OVERCOME JAKARTA'S SINKING? Research Project for Environmental Management)
+
+Significance of jakarta(Building Indonesia’s Resilience to Disaster)
+
+Main cause in highlighting the problem part (Study on the risk and impacts of land subsidence in Jakarta https://d-nb.info/1142926850/34 )
